[gd_scene load_steps=10 format=3 uid="uid://bmen0kmajg5bp"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_36p36"]
[ext_resource type="Texture2D" uid="uid://kg3o6r0jr43d" path="res://assets/enemies/officer_shoot_strip.png" id="2_yknm4"]
[ext_resource type="AudioStream" uid="uid://b4lgq24vvyvx4" path="res://assets/Sound/young-man-being-hurt-95628.mp3" id="3_gprpt"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_egqs7"]
radius = 21.0
height = 74.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ao7w2"]
size = Vector2(42.8232, 7.38276)

[sub_resource type="Animation" id="Animation_dwuv7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dbmkl"]
resource_name = "death"
length = 0.5

[sub_resource type="Animation" id="Animation_jm4o8"]
resource_name = "take_damage"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rw700"]
_data = {
"RESET": SubResource("Animation_dwuv7"),
"death": SubResource("Animation_dbmkl"),
"take_damage": SubResource("Animation_jm4o8")
}

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_36p36")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, 0)
scale = Vector2(3, 3)
texture = ExtResource("2_yknm4")
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-12, 0)
shape = SubResource("CapsuleShape2D_egqs7")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(278, -0.5)
scale = Vector2(13.2638, 13.4096)
shape = SubResource("RectangleShape2D_ao7w2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rw700")
}

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_gprpt")

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
